[gd_scene load_steps=10 format=3 uid="uid://cng8yewksr3xk"]

[ext_resource type="Script" path="res://components/unit/base_unit/base_unit.gd" id="1_bxnya"]
[ext_resource type="Texture2D" uid="uid://bt0jajm413vkn" path="res://assets/base_body.png" id="2_2kicu"]
[ext_resource type="Texture2D" uid="uid://dd18e3tcx58d1" path="res://assets/base_border.png" id="3_ulfta"]
[ext_resource type="Script" path="res://components/state_management/state_machine.gd" id="4_ghr87"]
[ext_resource type="PackedScene" uid="uid://c30l8cawqogpx" path="res://components/stats/health_component.tscn" id="4_opcn1"]
[ext_resource type="Script" path="res://components/unit/base_unit/base_unit_state_wander.gd" id="5_x51u7"]
[ext_resource type="Script" path="res://components/unit/base_unit/base_unit_state_scan.gd" id="6_mrf16"]
[ext_resource type="Script" path="res://components/unit/base_unit/base_unit_state_chase.gd" id="8_ei86w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ftc2b"]
radius = 6.0

[node name="BaseUnit" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_bxnya")

[node name="Body" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_2kicu")

[node name="Eye" type="Sprite2D" parent="."]
position = Vector2(3, 0)
scale = Vector2(0.04, 0.04)
texture = ExtResource("2_2kicu")

[node name="Barrier" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_ulfta")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_ftc2b")

[node name="HealthComponent" parent="." instance=ExtResource("4_opcn1")]

[node name="GenericStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_ghr87")
initial_state = NodePath("Wander")

[node name="Wander" type="Node" parent="GenericStateMachine" node_paths=PackedStringArray("character")]
script = ExtResource("5_x51u7")
character = NodePath("../..")

[node name="Scan" type="Node" parent="GenericStateMachine" node_paths=PackedStringArray("character")]
script = ExtResource("6_mrf16")
character = NodePath("../..")

[node name="Chase" type="Node" parent="GenericStateMachine" node_paths=PackedStringArray("character")]
script = ExtResource("8_ei86w")
character = NodePath("../..")

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_component_health_changed"]
[connection signal="health_depleted" from="HealthComponent" to="." method="_on_health_component_health_depleted"]
[connection signal="max_health_changed" from="HealthComponent" to="." method="_on_health_component_max_health_changed"]
